--- a/templates/blank.html
+++ b/templates/blank.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block content%} <!--Can be named anything not just content eg multiple blocks-->
 
-    <h1>Come work with us!</h1>
+    <h1>Empty</h1>
 {% endblock %}
