--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block content%} <!--Can be named anything not just content eg multiple blocks-->
 
-    <h1>About Page</h1>
+    <h1>Recipes</h1>
 {% endblock %}
