Added style.css and began working on recipes.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 
   <!--Reference the CSS file from static folder-->
   <link rel="stylesheet" href=" {{ url_for('static', filename='css/clean-blog.min.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <title>Flask Practice</title>
 </head>
 <body>
@@ -47,7 +48,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>Get Fed</h1>
-            <span class="subheading">A recipe database powered by your hunger <br> <small>(.. and Python)</small></span>
+            <span class="subheading">A recipe database powered by your hunger <br> <small>(and Python)</small></span>
           </div>
         </div>
       </div>
