--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -2,4 +2,26 @@
 {% block content%} <!--Can be named anything not just content eg multiple blocks-->
 
     <h1>Recipes</h1>
+    <p class="recipe">Choose from a broad range of recipes below</P>
+
+    <div class="container card-contaier recipe-card-container">
+        <div class="row">
+            <div class="col s6 m4 l3">
+              <div class="card recipe-card">
+                <div class="card-image card-img">
+                  <a href="#"><img src="https://img.taste.com.au/L_9PA2m8/taste/2019/07/3-ingredient-banana-pancakes-151444-1.jpg" alt="Banana Pancakes"></a>
+                </div>
+                <div class="row card-content card-info">
+                  <div class="col12">
+                    <div class="card-title">
+                      <em>Banana Pancakes</em>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+
+    
 {% endblock %}
