Added some styling to recipe.html card section

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -5,22 +5,19 @@
     <p class="recipe">Choose from a broad range of recipes below</P>
 
     <div class="container card-contaier recipe-card-container">
-        <div class="row">
-            <div class="col s6 m4 l3">
-              <div class="card recipe-card">
-                <div class="card-image card-img">
-                  <a href="#"><img src="https://img.taste.com.au/L_9PA2m8/taste/2019/07/3-ingredient-banana-pancakes-151444-1.jpg" alt="Banana Pancakes"></a>
-                </div>
-                <div class="row card-content card-info">
-                  <div class="col12">
-                    <div class="card-title">
-                      <em>Banana Pancakes</em>
-                    </div>
-                  </div>
-                </div>
-              </div>
+      <div class="row">
+        <div class="col s6 m4 l3">
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="https://img.taste.com.au/L_9PA2m8/taste/2019/07/3-ingredient-banana-pancakes-151444-1.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
+          </div>
         </div>
+      </div>
     </div>
 
     
