Added styling to recipes cards

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Necessary link to the CSS file in the vendor folder to load styling-->
-  <link rel="stylesheet" href=" {{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}">
+  <link rel="stylesheet" href=" {{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" type="text/css">
 
   <!--Reference the CSS file from static folder-->
-  <link rel="stylesheet" href=" {{ url_for('static', filename='css/clean-blog.min.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <link rel="stylesheet" href=" {{ url_for('static', filename='css/clean-blog.min.css') }}" type="text/css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
   <title>Flask Practice</title>
 </head>
 <body>
@@ -33,7 +33,7 @@
             <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('blank') }}">Blank</a>
+            <a class="nav-link" href="{{ url_for('recommend') }}">We Recommend</a>
           </li>
         </ul>
       </div>
