--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block content%} <!--Can be named anything not just content eg multiple blocks-->
 
-    <h1>Contact Us</h1>
+    <h2>{{ page_title }}</h2>
 {% endblock %}
