--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,19 +1,30 @@
 {% extends "base.html" %}
 {% block content%} <!--Can be named anything not just content eg multiple blocks-->
 
-    <h1>Recipes</h1>
-    <p class="recipe">Choose from a broad range of recipes below</P>
+    <!-- {% for number in list_of_numbers %}
+      <p>{{number}}</p>
+    {% endfor %}
+    <h2>{{ page_title }}</h2> -->
+
+    {{ recipes[0]["description"] }}
+
+    <p class="recipe">Choose from a broad range of recipes below</p>
 
     <div class="container card-contaier recipe-card-container">
       <div class="row">
-        <div class="col s6 m4 l3">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://img.taste.com.au/L_9PA2m8/taste/2019/07/3-ingredient-banana-pancakes-151444-1.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="col sm-6 md-4 lg-3">
+          <div class="card">
+            <div class="card-image">
+              <a href="#"><img class="card-img-top"
+                  src="https://img.taste.com.au/L_9PA2m8/taste/2019/07/3-ingredient-banana-pancakes-151444-1.jpg"
+                  alt="Banana Pancakes Image"></a>
+                <div class="row card-body">
+                  <div class="col s12">
+                  <p class="card-title text-align-left">Banana Pancakes</p>
+                  <p class="card-text">Simple yet delicious, try these perfect lazy-morning pancakes!</p>
+                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  </div>
+              </div>
             </div>
           </div>
         </div>
