--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,41 +1,36 @@
 {% extends "base.html" %}
-{% block content%} <!--Can be named anything not just content eg multiple blocks-->
+{% block content%}
+<!--Can be named anything not just content eg multiple blocks-->
 
-    <!-- {% for number in list_of_numbers %}
+<!-- {% for number in list_of_numbers %}
       <p>{{number}}</p>
     {% endfor %}
     <h2>{{ page_title }}</h2> -->
 
-    <!-- {{ recipes[0]["description"] }} -->
+<!-- {{ recipes[0]["description"] }} -->
+  <p class="recipe">Choose from a broad range of recipes below</p>
 
-    <p class="recipe">Choose from a broad range of recipes below</p>
-
-      <div class="container card-contaier recipe-card-container">
-      <div class="row">
+  <div class="container card-contaier recipe-card-container">
+    <div class="row">
 
 
-  {% for recipe in recipes %}
+      {% for recipe in recipes %}
 
-    
-        <div class="col sm-6 md-4 lg-3">
-          <div class="card">
-            <div class="card-image">
-              <a href="#"><img class="card-img-top featurette-image image-responsive"
-                  src="{{ recipe.image_source }}"
-                  alt="Banana Pancakes Image"></a>
-                <div class="row card-body">
-                  <div class="col s12">
-                    <h5>{{ recipe.name }}</h5>
-                    <p class="card-text">{{ recipe.description }}</p>
-                  </div>
-              </div>
+
+      <div class="col sm-6 md-4 lg-3">
+        <div class="card">
+          <div class="card-image">
+            <a href="#"><img src="{{ recipe.image_source }}" class="card-img-top" alt="Banana Pancakes Image"></a>
+            <div class="card-body">
+              <h5>{{ recipe.name }}</h5>
+              <p class="card-text">{{ recipe.description }}</p>
             </div>
           </div>
         </div>
-
-  {% endfor %}
-        
       </div>
     </div>
-    
+
+      {% endfor %}
+
+  </div>
 {% endblock %}
