--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -16,11 +16,10 @@
 
       {% for recipe in recipes %}
 
-
       <div class="col sm-6 md-4 lg-3">
         <div class="card">
           <div class="card-image">
-            <a href="#"><img src="{{ recipe.image_source }}" class="card-img-top" alt="Banana Pancakes Image"></a>
+            <a href="/recipes/{{ recipe.url }}"><img src="{{ recipe.image_source }}" class="card-img-top" alt="Banana Pancakes Image"></a>
             <div class="card-body">
               <h5>{{ recipe.name }}</h5>
               <p class="card-text">{{ recipe.description }}</p>
