--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -19,9 +19,9 @@
       <div class="col sm-6 md-4 lg-3">
         <div class="card">
           <div class="card-image">
-            <a href="/recipes/{{ recipe.url }}"><img src="{{ recipe.image_source }}" class="card-img-top" alt="Banana Pancakes Image"></a>
+            <img src="{{ recipe.image_source }}" class="card-img-top" alt="Banana Pancakes Image">
             <div class="card-body">
-              <h5>{{ recipe.name }}</h5>
+              <a href="/recipes/{{ recipe.url }}"><h5>{{ recipe.name }}</h5></a>
               <p class="card-text">{{ recipe.description }}</p>
             </div>
           </div>
